-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.1
-
None
-
-
76619eae4 (dev), 3e7d4f165 (6.5.2), d48a15a59 (6.5), 6a2956172 (6.6)
QFileInfo("assets:/path/to/file").fileName() using android assets file engine returns wrong name. It return "assets:/file" instead of "file".
- is duplicated by
-
QTBUG-112261 [REGRESSION] QDir::entryList returns invalid names (6.4.2 -> 6.4.3)
-
- Closed
-
-
QTBUG-114219 QFileInfo::fileName() does not strip assets prefix on Android
-
- Closed
-
| For Gerrit Dashboard: QTBUG-114576 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 485267,8 | Don't add prefix for BaseName | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 485828,2 | Don't add prefix for BaseName | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 485829,3 | Don't add prefix for BaseName | 6.5.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 485830,3 | Don't add prefix for BaseName | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |